# RootMultiNest

./: Makefile.am  README  TMultiNest.cxx  configure.ac
RingsModel/: MultiNestRings.cxx
inc/: LinkDef.h
m4/: MNPlugin.m4
src/: MultiNestCalculator.cxx
src/etc/: MCMCIntervalPlot.cxx  MCMCIntervalPlot.h
